name:                umbral
version:             0.1.0.0
synopsis:            Haskell Roguelike
description:         Please see README.md
homepage:            https://github.com/githubuser/umbral#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Galese
maintainer:          martin@galese.net
copyright:           2016 Martin Galese
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game
                      , Coord
                      , Symbol
                      , GameState
                      , Entity
                      , Actions
                      , ActorQueue
                      , Effects
                      , UI
                      , GameM
                      , AIStrategies
                      , Serialize
                      , Level
                      , Utils
                      , GameMap


  build-depends:      base,
                      lens,
                      random,
                      MonadRandom,
                      containers,
                      lens,
                      mtl,
                      data-default,
                      SFML,
                      colour,
                      dequeue,
                      DebugTraceHelpers,
                      monad-loops,
                      SFML,
                      aeson,
                      random-shuffle,
                      hfov,
                      array

  default-language:    Haskell2010

executable umbral-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , umbral
  default-language:    Haskell2010

test-suite umbral-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , umbral
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fros1y/umbral
